--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "author": "PokeSwitch",
   "license": "Apache-2.0",
   "dependencies": {
-    "express": "^4.19.2"
+    "@pkmn/dex": "^0.9.2",
+    "@pkmn/img": "^0.2.26",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
