--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "HTTP API for legal dex of all pokemon games",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest .",
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
@@ -21,9 +21,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
