--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest .",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "npm run build && node dist/src/index.js",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
